@@ -38,6 +38,8 @@
 - fixed a bug causing @_ to return the same size value no matter how many
   modifications had been made to the array (thanks to Ralph Becker for 
   finding this one).
+- made a small (possibly negligible) performance optimization to Sleep's
+  scalar value transfer code.
 
 2.1-beta 12  (11 Mar 07)
 ===========
